updates:added wishlist functionalities , routes and annotations
