# src/app.js
@@ -10,6 +10,8 @@ import categoryRoute from './routes/categoryRoutes.js';
 import productRoute from './routes/productRoutes.js';
 import addressRoutes from './routes/addressRoutes.js';
 import paymentRoutes from './routes/paymentRoutes.js';
+import wishlistRoutes from './routes/wishlistRoutes.js';
+
 import { errorHandler } from './middlewares/error-handler.js';
 import swaggerUi from 'swagger-ui-express';
 import fs from 'fs';
@@ -73,6 +75,7 @@ app.use('/api/orders', orderRoute);
 app.use('/api', productRoute);
 app.use('/api/addresses', addressRoutes);
 app.use('/api/payments', paymentRoutes);
+app.use('/api/wishlist', wishlistRoutes);
 
 const swaggerDocument = YAML.parse(fs.readFileSync('./docs/openapi.yaml', 'utf8'));
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
